Updating the parameters for the web search command in the library command specifications.

--- a/app/spec/commands/library.yml
+++ b/app/spec/commands/library.yml
@@ -33,7 +33,7 @@ command:
       mixins: [library]
       priority: 1000
       parse:
-        - library_name
+        - search_provider
         - search_text
         - max_results
     fetch:
