--- a/app/help/en/library.yml
+++ b/app/help/en/library.yml
@@ -17,14 +17,14 @@ file:
       Download and index a file in the library for search
 
     description: |
-      Use this command to download a document from <file_url> and save it to <file_path> within the specified <library_name>. The <file_type> indicates how the file should be parsed (e.g., markdown, pdf, code). Once added, the file is indexed and becomes searchable using search-library, enabling AI models to incorporate new knowledge from external or internal sources into their reasoning. This is useful for expanding the knowledge base with specifications, manuals, research, or reference documentation.
+      Use this command to download a document from <file_url> and save it to <file_path> within the specified <library_name>. The file extension should be used to tell the system how to parse the file. Once added, the file is indexed and becomes searchable using search-library, enabling AI models to incorporate new knowledge from external or internal sources into their reasoning. This is useful for expanding the knowledge base with specifications, manuals, research, or reference documentation.
 
   upload:
     overview: |
       Upload and index a file in the library for search
 
     description: |
-      Use this command to upload a document with the given <file_content> to <file_path> within the specified <library_name>. The <file_type> determines how the content will be parsed and indexed (e.g., markdown, json, txt). Once uploaded, the file becomes part of the library's searchable knowledge base, allowing AI models to access and retrieve information from the content using search-library. This is useful for incorporating custom data, specifications, or notes into the AI’s accessible memory.
+      Use this command to upload a document with the given <file_content> to <file_path> within the specified <library_name>. The file extension should be used to tell the system how to parse the file. Once uploaded, the file becomes part of the library's searchable knowledge base, allowing AI models to access and retrieve information from the content using search-library. This is useful for incorporating custom data, specifications, or notes into the AI’s accessible memory.
 
 web:
   overview: |
@@ -45,4 +45,4 @@ web:
       Retrieve and index a webpage in the library for search
 
     description: |
-      Use this command to fetch a webpage from <file_url> and save its content to <file_path> within the specified <library_name>. The <file_type> determines how the webpage will be parsed (e.g., html, markdown, txt) before being indexed for search. Once added, the content becomes part of the searchable library, allowing AI models to extract insights and reference online knowledge as part of their reasoning and assistance processes. This is useful for preserving and leveraging web-based documentation, research, or examples.
+      Use this command to fetch a webpage from <file_url> and save its content to <file_path> within the specified <library_name>. Once added, the content becomes part of the searchable library, allowing AI models to extract insights and reference online knowledge as part of their reasoning and assistance processes. This is useful for preserving and leveraging web-based documentation, research, or examples.
