--- a/docker/Dockerfile.cli
+++ b/docker/Dockerfile.cli
@@ -55,7 +55,7 @@ RUN groupadd -f --system --gid ${ZIMAGI_USER_UID} zimagi \
 ENV VIRTUAL_ENV_DIR=/opt/venv
 ENV DATA_DIR=/var/local/zimagi
 ENV APP_DIR=/usr/local/share/zimagi
-ENV PACKAGE_DIR=/usr/local/share/zimagi-client
+ENV SDK_DIR=/usr/local/share/zimagi-client
 
 ENV PATH="${VIRTUAL_ENV_DIR}/bin:${PATH}"
 #
@@ -69,10 +69,10 @@ RUN pip3 install --no-cache-dir -r /home/zimagi/requirements.client.txt
 RUN test ! -f /home/zimagi/requirements.${ZIMAGI_ENVIRONMENT}.txt \
   || pip3 install --no-cache-dir -r /home/zimagi/requirements.${ZIMAGI_ENVIRONMENT}.txt
 
-COPY --chown=zimagi:zimagi ./package ${PACKAGE_DIR}
-COPY --chown=zimagi:zimagi ./app/VERSION ${PACKAGE_DIR}/VERSION
-VOLUME ${PACKAGE_DIR}
-RUN cd ${PACKAGE_DIR} \
+COPY --chown=zimagi:zimagi ./sdk/python ${SDK_DIR}
+COPY --chown=zimagi:zimagi ./app/VERSION ${SDK_DIR}/VERSION
+VOLUME ${SDK_DIR}
+RUN cd ${SDK_DIR} \
   && rm -Rf build dist \
   && pip3 install -U pip setuptools \
   && python3 setup.py sdist bdist_wheel --universal \
