--- a/compose.standard.local.yaml
+++ b/compose.standard.local.yaml
@@ -41,7 +41,7 @@ x-zimagi-service-shared: &zimagi-service-shared
   volumes:
     - /var/run/docker.sock:/var/run/docker.sock
     - ./app:/usr/local/share/zimagi
-    - ./package:/usr/local/share/zimagi-client
+    - ./sdk/python:/usr/local/share/zimagi-client
     - ./lib:/usr/local/lib/zimagi
   depends_on:
     - postgresql-zimagi
