--- a/docker/Dockerfile.cli
+++ b/docker/Dockerfile.cli
@@ -35,8 +35,12 @@ RUN apt-get update -y \
   && sed '/^\s*\#.*$/d' /root/packages.core.txt | xargs -r apt-get install -y --no-install-recommends \
   && rm -rf /var/lib/apt/lists/*
 
+RUN curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /usr/share/keyrings/nodesource.gpg \
+  && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/nodesource.gpg] " \
+  "https://deb.nodesource.com/node_24.x nodistro main" > /etc/apt/sources.list.d/nodesource.list
+
 RUN apt-get update -y \
-  && apt-get install -y --no-install-recommends nodejs npm \
+  && apt-get install -y --no-install-recommends nodejs \
   && rm -rf /var/lib/apt/lists/*
 #
 # User initialization
