--- a/sdk/javascript/package.json
+++ b/sdk/javascript/package.json
@@ -10,13 +10,14 @@
     "dist"
   ],
   "scripts": {
-    "build": "npx rollup -c",
+    "build": "npx rollup -c && npm run build:types",
+    "build:types": "tsc --emitDeclarationOnly --declaration --outDir dist --noEmitOnError false",
     "dev": "npx rollup -c -w",
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "test:watch": "node --experimental-vm-modules node_modules/.bin/jest --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
-    "lint": "npx eslint src/**/*.js",
-    "lint:fix": "npx eslint src/**/*.js --fix",
+    "lint": "npx eslint src/**/*.ts",
+    "lint:fix": "npx eslint src/**/*.ts --fix",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
@@ -28,26 +29,33 @@
   "author": "Zimagi Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
     "crypto-js": "^4.2.0",
     "papaparse": "^5.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
+    "@babel/preset-typescript": "^7.23.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^22.0.0",
+    "@types/crypto-js": "^4.2.0",
+    "@types/papaparse": "^5.3.14",
+    "@types/node-fetch": "^2.6.13",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
-    "rollup": "^4.46.2"
+    "rollup": "^4.46.2",
+    "typescript": "^5.9.2"
   },
   "engines": {
-    "node": ">=22.18.0"
+    "node": ">=24.0.0"
   },
   "type": "module"
 }
