Adding configurable host ports for Docker Compose services.

--- a/compose.standard.local.yaml
+++ b/compose.standard.local.yaml
@@ -64,7 +64,7 @@ services:
     <<: *zimagi-service
     entrypoint: zimagi-command
     ports:
-      - '5123:5000'
+      - '${ZIMAGI_COMMAND_PORT}:5000'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:5000/status']
       interval: 5s
@@ -75,7 +75,7 @@ services:
     <<: *zimagi-service
     entrypoint: zimagi-mcp
     ports:
-      - '6123:5000'
+      - '${ZIMAGI_MCP_PORT}:5000'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:5000/status']
       interval: 5s
@@ -86,7 +86,7 @@ services:
     <<: *zimagi-service
     entrypoint: zimagi-data
     ports:
-      - '5323:5000'
+      - '${ZIMAGI_DATA_PORT}:5000'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:5000/status']
       interval: 5s
@@ -119,7 +119,7 @@ services:
     <<: *zimagi-service
     entrypoint: celery-flower
     ports:
-      - '5124:5000'
+      - '${ZIMAGI_FLOWER_PORT}:5000'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:5000']
       interval: 5s
