--- a/compose.db.yaml
+++ b/compose.db.yaml
@@ -20,7 +20,7 @@ services:
       POSTGRES_USER: zimagi
       POSTGRES_PASSWORD: ${ZIMAGI_POSTGRES_PASSWORD}
     ports:
-      - '5432:5432'
+      - '${ZIMAGI_HOST_POSTGRES_PORT}:5432'
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -d zimagi -U zimagi']
       interval: 1s
@@ -35,7 +35,7 @@ services:
     volumes:
       - 'redis_zimagi_data:/data'
     ports:
-      - '6379:6379'
+      - '${ZIMAGI_HOST_REDIS_PORT}:6379'
     healthcheck:
       test: ['CMD', 'redis-cli', '--raw', 'ping']
       interval: 1s
@@ -56,8 +56,7 @@ services:
       QDRANT__SERVICE__MAX_REQUEST_SIZE_MB: 1000
       QDRANT__SERVICE__API_KEY: ${ZIMAGI_QDRANT_ACCESS_KEY}
     ports:
-      - '6333:6333'
-      - '6334:6334'
+      - '${ZIMAGI_HOST_QDRANT_PORT}:6333'
     healthcheck:
       test: ['CMD-SHELL', 'bash -c ":> /dev/tcp/127.0.0.1/6333" || exit 1']
       interval: 5s
