--- a/compose.nvidia.test.yaml
+++ b/compose.nvidia.test.yaml
@@ -84,7 +84,7 @@ services:
     <<: *zimagi-service-nvidia
     entrypoint: zimagi-command
     ports:
-      - '5123:5000'
+      - '${ZIMAGI_COMMAND_PORT}:5000'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:5000/status']
       interval: 5s
@@ -95,7 +95,7 @@ services:
     <<: *zimagi-service
     entrypoint: zimagi-mcp
     ports:
-      - '6123:5000'
+      - '${ZIMAGI_MCP_PORT}:5000'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:5000/status']
       interval: 5s
@@ -106,7 +106,7 @@ services:
     <<: *zimagi-service
     entrypoint: zimagi-data
     ports:
-      - '5323:5000'
+      - '${ZIMAGI_DATA_PORT}:5000'
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost:5000/status']
       interval: 5s
