--- a/app/spec/base/command.yml
+++ b/app/spec/base/command.yml
@@ -77,7 +77,7 @@ command_base:
     background: true
   ai:
     mixins: [language_model, qdrant]
-    groups_allowed: [chat-user]
+    groups_allowed: [chat-user, ai-user]
     background: false
   chat:
     mixins: [chat, qdrant]
