Updating the tools command to accept a tool user parameter.

--- a/app/spec/commands/mcp.yml
+++ b/app/spec/commands/mcp.yml
@@ -3,6 +3,13 @@ command:
     base: platform
     background: false
     parameters:
+      tool_user:
+        parser: variable
+        type: str
+        optional: '--user'
+        help: 'MCP tool user'
+        value_label: USER_NAME
+        tags: [mcp, user]
       servers:
         parser: variables
         type: str
@@ -10,4 +17,6 @@ command:
         help: 'Filter by MCP server names'
         value_label: NAME
         tags: [mcp, servers]
-    parse: servers
+    parse:
+      - tool_user
+      - servers
